This is now a risc-v CPU with an RV32I ISA project. I've already added a few RV instructions to the ALU. No data memory yet, just registers. Very basic.

--- a/sim/makefile
+++ b/sim/makefile
@@ -7,4 +7,5 @@ library_input:  ../rtl/*.sv ../tb/*.sv #cpu_top.sv ifu.sv reg32bit.sv inst_mem.s
 	$(CC) $(FLAGS) ../rtl/*.sv ../tb/*.sv -o verilog #cpu_top.sv ifu.sv reg32bit.sv inst_mem.sv alu.sv regfile.sv clk_gen.sv ../tb/tb_top.sv
 
 	vvp verilog
-	gtkwave regfile_dump.vcd waves.gtkw  &
+#	gtkwave regfile_dump.vcd waves.gtkw  &
+	gtkwave -o -t cpu_top.stems -f cpu_dump.vcd waves.gtkw &
